--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,7 @@ typings/
 # DynamoDB Local files
 .dynamodb/
 
+.idea/
 .gitignore
 .idea/.gitignore
 .idea/inspectionProfiles/
@@ -108,4 +109,4 @@ typings/
 .idea/vcs.xml
 .idea/vue-cli-plugin-rww.iml
 generator/uni_app/assets/
-package.json
+/package-lock.json
