feat(package.json): 添加自动更新npm版本号的命令

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm publish"
+      "pre-push": "npm version patch \n npm publish"
     }
   }
 }
